--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
+    "react-cookie": "^4.0.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.10.1",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.1",
